# assignment-project

./: README.md  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_date_joined_user_groups_user_is_active_and_more.py  0004_alter_user_phone_number.py  0005_user_email.py
services/: admin.py  forms.py  models.py  scheduler.py  tasks.py  urls.py  utils.py  views.py
services/management/commands/: create_seats.py  delete_old_spectacles.py
services/migrations/: 0001_initial.py  0002_spectacle_age_limit.py  0003_spectacle_image.py  0004_remove_spectacletime_date_passing_and_more.py  0005_spectacle_time_passing_delete_spectacletime.py  0006_ticket.py  0007_alter_columnseats_options_alter_hall_options_and_more.py  0008_ticket_qr_code_alter_ticket_seat.py  0009_alter_ticket_seat_alter_ticket_spectacle_and_more.py  0010_alter_spectacle_hall.py
static/css/: detail.css  modal.css  spectacles.css  styles.css
templates/: base.html
templates/services/: detail.html  home.html  my_tickets.html  payment.html  spectacles.html  ticket-email.html
theater/: asgi.py  settings.py  urls.py  wsgi.py
